--- a/css/team.css
+++ b/css/team.css
@@ -53,7 +53,7 @@ body {
 .cardtext {
     /* width: 100%; */
     width: 150px;
-    height: 250px;
+    height: 100px;
     background-color: white;
     margin: 10px;
     border-radius: 10px;
@@ -108,6 +108,7 @@ body {
     font-size: 13px;
     text-align: center;
     margin-top: 20px;
+    margin-bottom: 20px;
     color: black;
     font-weight: 200;
     letter-spacing: 2px;
