--- a/css/blog.css
+++ b/css/blog.css
@@ -1,89 +1,149 @@
-.Blog-heading{
-  position: absolute;  
-  padding-left: calc(100/1536 *100%);
-  height: 40px;
-  width:100%;
-}
 
-.heading{
-  color: white;
-  font-size: xx-large;
-}
-
-.Blog-title{
-  font-size: x-large;
-  font-weight: 700;
-}
-
-.Blog-top {
-    position: relative;                                 /* Set the position of the content section within the background */
-    top: 0;                                             /* Position the content section at the top */
-    left: 0;                                            /* Position the content section at the left */
-    width: 100%;                                        /* Set the width of the content section to 100% */
-    background-color: rgba(0, 0, 0, 0.8);             /* Set the background color of the content section with opacity */
-    z-index: 3;                                         /* Set the z-index of the content section to 3 */
-    color: white;                                     /* Set the text color of the content section to white */
-    margin-top: calc(100/1536 *100%);                                  /* Add top margin to the content section */
-    padding: calc(20/1536 *100%);                                      /* Add padding to the content section */
-    transition: opacity 0.5s;                           /* Apply transition effect to the opacity property */
-    display: flex;                                      /* Display the content section as a flex container */
-  }
-
-  .Blog-left{
-    flex: 1;                                            /* Set the flex property of the left section to 1 */
-    padding-left: calc(100/1536 *100%);                                /* Add left padding to the left section */
-    padding-top: 100px;                                  /* Add top padding to the left section */
-    width:100%;
-  }
-
-  .Blog-right {
-    flex: 0;                                            /* Set the flex property of the right section to 1 */
-    padding-top: 100px;
-    padding-left: 100px;                                 /* Add left padding to the right section */
-    padding-right: calc(350/1536 *100%);                                /* Add right padding to the right section */
-    width: 35%;
-  }
-  
-  .Blog-right > img {
-    height: 130px;                                       /* Set the height of the image within the right section */
-    width: auto;
+    .blog_section {
+      padding-top: 5rem;
+      padding-bottom: 3rem;
     }
-
-    #more1 {
-      display: none;
+    .blog_section .blog_content .blog_item {
+      margin-bottom: 30px;
+      box-shadow: 0 0 11px 0 rgba(6, 22, 58, 0.14);
+      position: relative;
+      border-radius: 2px;
+      overflow: hidden;
     }
-
-    #more2 {
-      display: none;
+    .blog_section .blog_content .blog_item:hover .blog_image img {
+      transform: scale(1.1);
     }
-
-    #more3 {
-      display: none;
+    .blog_section .blog_content .blog_item .blog_image {
+      overflow: hidden;
+      padding: 0;
     }
-
-    .Blog {
-      position: relative;                                 /* Set the position of the content section within the background */
-      top: 0;                                             /* Position the content section at the top */
-      left: 0;                                            /* Position the content section at the left */
-      width: 100%;                                        /* Set the width of the content section to 100% */
-      background-color: rgba(0, 0, 0, 0.8);             /* Set the background color of the content section with opacity */
-      z-index: 3;                                         /* Set the z-index of the content section to 3 */
-      color: white;                                     /* Set the text color of the content section to white */
-      padding-left: calc(20/1536 *100%);                                      /* Add padding to the content section */
-      transition: opacity 0.5s;                           /* Apply transition effect to the opacity property */
-      display: flex;                                      /* Display the content section as a flex container */
+    .blog_section .blog_content .blog_item .blog_image img {
+      width: 100%;
+      transition: transform 0.5s ease-in-out;
     }
-
-    .btn{
-      background: #1f80e0;
-      height: 25px;
-      padding: 0 10px;
+    .blog_section .blog_content .blog_item .blog_image span i {
+      position: absolute;
+      z-index: 2;
       color: #fff;
-      border-radius: 5px;
-      border: none;
-      outline: none;
-      text-transform: uppercase;
-      font-weight: 300;
-      font-size: 12px;
-      margin: 0 10px;
+      font-size: 18px;
+      width: 38px;
+      height: 45px;
+      padding-top: 7px;
+      text-align: center;
+      right: 20px;
+      top: 0;
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 79%, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 79%, 0 100%);
+      background-color: #ff5e14;
+    }
+    .blog_section .blog_content .blog_item .blog_details {
+      padding: 25px 20px 30px 20px;
+    }
+    .blog_section .blog_content .blog_item .blog_details .blog_title h5 a {
+      color: #020d26;
+      margin-top: 0;
+      margin-bottom: 10px;
+      font-size: 25px;
+      line-height: 32px;
+      font-weight: 400;
+      transition: all 0.3s;
+      text-decoration: none;
+    }
+    .blog_section .blog_content .blog_item .blog_details .blog_title h5 a:hover {
+      color: #ff5e14;
+    }
+    .blog_section .blog_content .blog_item .blog_details ul {
+      padding: 0 3px 10px 0;
+      margin: 0;
+    }
+    .blog_section .blog_content .blog_item .blog_details ul li {
+      display: inline-block;
+      padding-right: 15px;
+      position: relative;
+      color: #7f7f7f;
+    }
+    .blog_section .blog_content .blog_item .blog_details ul li i {
+      padding-right: 7px;
+    }
+    .blog_section .blog_content .blog_item .blog_details p {
+      border-top: 1px solid #e5e5e5;
+      margin-top: 4px;
+      padding: 20px 0 4px;
+    }
+    .blog_section .blog_content .blog_item .blog_details a {
+      font-size: 16px;
+      display: inline-block;
+      color: #ff5e14;
+      font-weight: 600;
+      text-decoration: none;
+      transition: all 0.3s;
+    }
+    .blog_section .blog_content .blog_item .blog_details a:hover {
+      color: #020d26;
+    }
+    .blog_section .blog_content .blog_item .blog_details a i {
+      vertical-align: middle;
+      font-size: 20px;
+    }
+    .blog_section .blog_content .owl-nav {
+      display: block;
+    }
+    .blog_section .blog_content .owl-nav .owl-prev {
+      position: absolute;
+      left: -27px;
+      top: 33%;
+      border: 5px solid #fff;
+      text-align: center;
+      z-index: 5;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      outline: 0;
+      background: #ff5e14;
+      transition: all 0.3s;
+      color: #fff;
+    }
+    .blog_section .blog_content .owl-nav .owl-prev span {
+      font-size: 25px;
+      margin-top: -6px;
+      display: inline-block;
+    }
+    .blog_section .blog_content .owl-nav .owl-prev:hover {
+      background: #fff;
+      border-color: #ff5e14;
+      color: #ff5e14;
+    }
+    .blog_section .blog_content .owl-nav .owl-next {
+      position: absolute;
+      right: -27px;
+      top: 33%;
+      border: 5px solid #fff;
+      text-align: center;
+      z-index: 5;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      outline: 0;
+      background: #ff5e14;
+      color: #fff;
+      transition: all 0.3s;
+    }
+    .blog_section .blog_content .owl-nav .owl-next span {
+      font-size: 25px;
+      margin-top: -6px;
+      display: inline-block;
+    }
+    .blog_section .blog_content .owl-nav .owl-next:hover {
+      background: #fff;
+      border-color: #ff5e14;
+      color: #ff5e14;
+    }
+    
+    @media only screen and (max-width: 577px) {
+      .blog_section .owl-nav .owl-prev {
+        left: -17px !important;
+      }
+      .blog_section .owl-nav .owl-next {
+        right: -17px !important;
+      }
     }
