--- a/css/styles.css
+++ b/css/styles.css
@@ -165,68 +165,19 @@ body::-webkit-scrollbar {
   }
   
   /* Styling for the partners section of the page */
-  #Partners {
-    position: relative;
-    background: white;
-    height: 50vh;
-    width: 100%;
-    display:grid;
-    grid-auto-flow: column;
-    place-content: center;
-  }
-  figure{
-    display:grid;
-    border-radius: 1em;
-    overflow: hidden;
-    cursor:pointer;
-  }
-  figure>*{
-    grid-area: 1/1;
-    transition:0.4s;
-  }
-  figure figcaption{
-    display:grid;
-    align-items: end;
-    font-family: Poppins;
-    font-size: 2.3em;
-    font-weight: bold;
-    color: rgb(0, 0, 0);
-    padding:0.75rem;
-    background:var(--c,#0009);
-    clip-path:inset(0 var(--_i,100%) 0 0);
-    -webkit-mask:
-    linear-gradient(#000 0 0),
-    linear-gradient(#000 0 0);
-    -webkit-mask-composite: xor;
-    -webkit-mask-clip: text,pading-box;
-    margin: -1px;
-  }
-
-  figure:hover figcaption{
-    --_i:0%;
-  }
-  figure:hover img{
-    transform: scale(1.2);
-  }
-  
-  @supports not (-webkit-mask-clip: text) {
-    figure figcaption {
-     -webkit-mask: none;
-     color: #fff;
-    }
-  }
-  
-  /* Styling for the contact section of the page */
-  #Contact {
-    position: relative;                                 /* Position the contact section relative to its normal position */
-    background-color: burlywood;                      /* Set the background color of the contact section */
-    height: 600px;                                      /* Set the height of the contact section to 600 pixels */
-    width: 100%;                                        /* Set the width of the contact section to 100% */
-  }
-  
-  .titles {
-    font-weight: 600;                                   /* Set the font weight of titles to 600*/
+#Partners {
+  position: relative;
+  background: white;
+  height: 50vh;
+  width: 100%;
+  display: grid;
+  grid-auto-flow: column;
+  place-content: center;
+  gap: 20px; /* Add spacing between figures */
+}
+.titles {
+  font-weight: 600;                                   /* Set the font weight of titles to 600*/
 }  
 .subtitles {
-  font-weight: 100;                                   /* Set the font weight of subtitles to 100 */
+  font-weight: 100;
 }
