--- a/css/team.css
+++ b/css/team.css
@@ -48,6 +48,8 @@ body {
     transition: all 0.3s ease;
     text-decoration: none;
     margin: 25px;
+    padding-left: 20px;                                 /* Add left padding to the card elements */
+    padding-right: 20px;
 }
 
 .cardtext {
