--- a/css/team.css
+++ b/css/team.css
@@ -11,6 +11,11 @@ body {
     justify-content: center;
 }
 
+.heading2{
+    padding-top: 20px;
+    justify-content: center;
+}
+
 .content {
     max-width: 1024px;
     width: 100%;
