--- a/css/partners.css
+++ b/css/partners.css
@@ -2,7 +2,12 @@
     z-index: 20;
     background-color: rgb(132, 144, 255);
 }
-
+#PartnersH{
+    background-color: rgb(132, 144, 255);
+    align-items: center;
+    text-align: center;
+    width: 100%;
+}
 #Partners a{
     text-decoration: none;
 }
