--- a/css/work.css
+++ b/css/work.css
@@ -1,6 +1,6 @@
 #Work{
     z-index: 20;
-    background-color: black;
+    background-color: rgb(132, 144, 255);
 }
 
 #Work a{
@@ -54,19 +54,7 @@
     transition: 0.5s;
 }
 
-#Work1:hover{
-    height: 40vh;
-    margin: 0px;
-    width: 30vw;
-}
-
-#Work2:hover{
-    height: 40vh;
-    margin: 0px;
-    width: 30vw;
-}
-
-#Work3:hover{
+#Work1:hover, #Work2:hover, #Work3:hover{
     height: 40vh;
     margin: 0px;
     width: 30vw;
