--- a/css/blog.css
+++ b/css/blog.css
@@ -1,149 +1,121 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
 
-    .blog_section {
-      padding-top: 5rem;
-      padding-bottom: 3rem;
-    }
-    .blog_section .blog_content .blog_item {
-      margin-bottom: 30px;
-      box-shadow: 0 0 11px 0 rgba(6, 22, 58, 0.14);
-      position: relative;
-      border-radius: 2px;
-      overflow: hidden;
-    }
-    .blog_section .blog_content .blog_item:hover .blog_image img {
-      transform: scale(1.1);
-    }
-    .blog_section .blog_content .blog_item .blog_image {
-      overflow: hidden;
-      padding: 0;
-    }
-    .blog_section .blog_content .blog_item .blog_image img {
-      width: 100%;
-      transition: transform 0.5s ease-in-out;
-    }
-    .blog_section .blog_content .blog_item .blog_image span i {
-      position: absolute;
-      z-index: 2;
-      color: #fff;
-      font-size: 18px;
-      width: 38px;
-      height: 45px;
-      padding-top: 7px;
-      text-align: center;
-      right: 20px;
-      top: 0;
-      -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 79%, 0 100%);
-      clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 79%, 0 100%);
-      background-color: #ff5e14;
-    }
-    .blog_section .blog_content .blog_item .blog_details {
-      padding: 25px 20px 30px 20px;
-    }
-    .blog_section .blog_content .blog_item .blog_details .blog_title h5 a {
-      color: #020d26;
-      margin-top: 0;
-      margin-bottom: 10px;
-      font-size: 25px;
-      line-height: 32px;
-      font-weight: 400;
-      transition: all 0.3s;
-      text-decoration: none;
-    }
-    .blog_section .blog_content .blog_item .blog_details .blog_title h5 a:hover {
-      color: #ff5e14;
-    }
-    .blog_section .blog_content .blog_item .blog_details ul {
-      padding: 0 3px 10px 0;
-      margin: 0;
-    }
-    .blog_section .blog_content .blog_item .blog_details ul li {
-      display: inline-block;
-      padding-right: 15px;
-      position: relative;
-      color: #7f7f7f;
-    }
-    .blog_section .blog_content .blog_item .blog_details ul li i {
-      padding-right: 7px;
-    }
-    .blog_section .blog_content .blog_item .blog_details p {
-      border-top: 1px solid #e5e5e5;
-      margin-top: 4px;
-      padding: 20px 0 4px;
-    }
-    .blog_section .blog_content .blog_item .blog_details a {
-      font-size: 16px;
-      display: inline-block;
-      color: #ff5e14;
-      font-weight: 600;
-      text-decoration: none;
-      transition: all 0.3s;
-    }
-    .blog_section .blog_content .blog_item .blog_details a:hover {
-      color: #020d26;
-    }
-    .blog_section .blog_content .blog_item .blog_details a i {
-      vertical-align: middle;
-      font-size: 20px;
-    }
-    .blog_section .blog_content .owl-nav {
-      display: block;
-    }
-    .blog_section .blog_content .owl-nav .owl-prev {
-      position: absolute;
-      left: -27px;
-      top: 33%;
-      border: 5px solid #fff;
-      text-align: center;
-      z-index: 5;
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      outline: 0;
-      background: #ff5e14;
-      transition: all 0.3s;
-      color: #fff;
-    }
-    .blog_section .blog_content .owl-nav .owl-prev span {
-      font-size: 25px;
-      margin-top: -6px;
-      display: inline-block;
-    }
-    .blog_section .blog_content .owl-nav .owl-prev:hover {
-      background: #fff;
-      border-color: #ff5e14;
-      color: #ff5e14;
-    }
-    .blog_section .blog_content .owl-nav .owl-next {
-      position: absolute;
-      right: -27px;
-      top: 33%;
-      border: 5px solid #fff;
-      text-align: center;
-      z-index: 5;
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      outline: 0;
-      background: #ff5e14;
-      color: #fff;
-      transition: all 0.3s;
-    }
-    .blog_section .blog_content .owl-nav .owl-next span {
-      font-size: 25px;
-      margin-top: -6px;
-      display: inline-block;
-    }
-    .blog_section .blog_content .owl-nav .owl-next:hover {
-      background: #fff;
-      border-color: #ff5e14;
-      color: #ff5e14;
-    }
-    
-    @media only screen and (max-width: 577px) {
-      .blog_section .owl-nav .owl-prev {
-        left: -17px !important;
-      }
-      .blog_section .owl-nav .owl-next {
-        right: -17px !important;
-      }
-    }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: "Quicksand", sans-serif;
+  display: grid;
+  place-items: center;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-block: 2rem;
+  gap: 2rem;
+  margin-top: 60px;
+  padding-bottom: 60px;
+  background: linear-gradient(#121212, #C04DFF);
+  width: 100vw;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+a{
+  text-decoration: none;
+  color: #333;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  width: clamp(20rem, calc(20rem + 2vw), 22rem);
+  height: 65vh;
+  overflow: hidden;
+  box-shadow: 0 .1rem 1rem rgba(0, 0, 0, 0.1);
+  border-radius: 1em;
+  background: #ECE9E6;
+  background: linear-gradient(to right, #FFFFFF, #ECE9E6);
+  transition: 0.5s;
+  text-decoration: none;
+  margin-top: 20px;
+}
+
+.card:hover {
+  transform: translateY(-.5rem);
+  box-shadow: 0 .5rem 2rem rgba(0, 0, 0, 0.1);
+  height: 70vh;
+}
+
+
+
+.card__body {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+
+.tag {
+  align-self: flex-start;
+  padding: .25em .75em;
+  border-radius: 1em;
+  font-size: .75rem;
+}
+
+.tag + .tag {
+  margin-left: .5em;
+}
+
+.tag-blue {
+  background: #56CCF2;
+background: linear-gradient(to bottom, #2F80ED, #56CCF2);
+  color: #fafafa;
+}
+
+.tag-brown {
+  background: #D1913C;
+background: linear-gradient(to bottom, #FFD194, #D1913C);
+  color: #fafafa;
+}
+
+.tag-red {
+  background: #cb2d3e;
+background: linear-gradient(to bottom, #ef473a, #cb2d3e);
+  color: #fafafa;
+}
+
+.card__body h4 {
+  font-size: 1.5rem;
+  text-transform: capitalize;
+}
+
+.card__footer {
+  display: flex;
+  padding: 1rem;
+  margin-top: auto;
+}
+
+.user {
+  display: flex;
+  gap: .5rem;
+}
+
+.user__image {
+  border-radius: 50%;
+}
+
+.user__info > small {
+  color: #666;
+}
