--- a/css/homeelements.css
+++ b/css/homeelements.css
@@ -21,15 +21,23 @@
   
 }
 
+#About{
+  position: relative;                                 /* Set the position of the content section */
+  margin: 0;                                          /* Remove margin from the content section */
+  max-height: 100vh;                                  /* Set the maximum height of the content section to 100 viewport height */
+  width: auto;                                        /* Set the width of the content section to auto */
+  z-index: 2;                                         /* Set the z-index of the content section to 2 */
+}
+
 #About-content {
   position: absolute;                                 /* Set the position of the content section within the background */
   top: 0;                                             /* Position the content section at the top */
   left: 0;                                            /* Position the content section at the left */
   width: 100%;                                        /* Set the width of the content section to 100% */
-  background-color: rgba(0, 0, 0, 0.8);             /* Set the background color of the content section with opacity */
+  background-color: rgba(0, 0, 0);             /* Set the background color of the content section with opacity */
   z-index: 3;                                         /* Set the z-index of the content section to 3 */
   color: white;                                     /* Set the text color of the content section to white */
-  margin-top: 300px;                                  /* Add top margin to the content section */
+  margin-top: 20vh;                                  /* Add top margin to the content section */
   padding: 20px;                                      /* Add padding to the content section */
   transition: opacity 0.5s;                           /* Apply transition effect to the opacity property */
   display: flex;                                      /* Display the content section as a flex container */
@@ -51,9 +59,8 @@
   padding-right: 25vh;                                /* Add right padding to the right section */
 }
 
-#About-right > img {
-  height: 100%;                                       /* Set the height of the image within the right section */
-  width: auto;                                        /* Set the width of the image within the right section to auto */
+#logo_vid{
+  height: 400px;
 }
 
 #Blog-content {
