--- a/css/work.css
+++ b/css/work.css
@@ -1,15 +1,15 @@
 #Work{
     z-index: 20;
     background-color: black;
-    height: 103vh;
+    height: auto;
 }
 
 #WorkH{
-    background-color: black;
     align-items: center;
     text-align: center;
     width: 100%;
-    font-size: 1.8vw;
+    font-size: 3.5vw;
+    height: auto;
     padding-bottom: -10vw;
 }
 
@@ -23,6 +23,7 @@
     background-color: #FF00AA;
     height: 39vw;
     margin: 3vw;
+    margin-top: -1vw;
     width: 26vw;
     border-radius: 10px;
     position: relative;
