--- a/css/partners.css
+++ b/css/partners.css
@@ -19,7 +19,7 @@
     padding: 10px;
     background-color: #58d8ff;
     height: 30vh;
-    margin-top: -5vw;
+    margin-top: -16vh;
     margin-left: 3vw;
     width: 20vw;
     border-radius: 10px;
