--- a/css/styles.css
+++ b/css/styles.css
@@ -95,74 +95,74 @@ body::-webkit-scrollbar {
   height: 90%;                                       /* Allow the logo image height to adjust proportionally */
 }
 
-  .menu {
-    max-width: 1000px;                                  /* Set the maximum width of the menu container to 1000 pixels */
-    margin-left: auto;                                       /* Center align the menu items */
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-right: 50px;                                       /* Center align the menu container */
-    padding-top: 15px;                                  /* Add top padding to the menu container */
-    padding-left: 20%;
-  }
-  
-  .menu-items {
-    list-style-type: none;                              /* Remove the default bullet points from the menu items */
-    float: left;   
-    margin: auto;                                       /* Center align the menu items */
-    padding-left: 20px;                                 /* Add left padding to the menu items */
-    padding-right: 20px;                                /* Add right padding to the menu items */
-  }
-  
-  .menu-item {
-    float: left;                                        /* Float the menu items to the left */
-    padding-left: 40px;                                 /* Add left padding to the menu items */
-    height: 40px;                                       /* Set the height of the menu items to 40 pixels */
-  }
-  
-  .menu-item a {
-    color: black;                                     /* Set the color of the menu item links to black */
-    text-decoration: none;                              /* Remove the underline from the menu item links */
-  }
-  
-  .menu-item :hover {
-    color: rgb(141, 0, 197);                          /* Change the color of the menu item links on hover */
-  }
-  
-  /* Styling for the content section of the page */
-  #Content {
-    display: flex;                                      /* Display the content section as a flex container */
-    flex-direction: row;                                /* Set the flex direction to row */
-    flex-wrap: wrap;                                    /* Enable wrapping of flex items */
-    background: black;                                /* Set the background color of the content section to black */
-    scroll-snap-type: mandatory;                        /* Enable mandatory scroll snapping for the content section */
-    margin-top: 60px;                                   /* Add top margin to the content section to avoid overlapping with the fixed navbar */
-    z-index: 5;                                         /* Set the z-index of the content section to 5 */
-  }
-  
-  /* Styling for the about section of the page */
-  #About {
-    background-color: rgb(27, 27, 27);                /* Set the background color of the about section */
-    height: 100%;                                       /* Set the height of the about section to 100% */
-    width: 100%;                                        /* Set the width of the about section to 100% */
-  }
-  
-  /* Styling for the blog section of the page */
-  #Work {
-    position: relative;                                 /* Position the blog section relative to its normal position */  
-    background-color: #39FF14;             /* Set the background color of the blog section */
-    height: 50vh;                                      /* Set the height of the blog section to 600 pixels */
-    width: 100%;                                        /* Set the width of the blog section to 100% */
-    display: flex;
-  }
-  
-  /* Styling for the newsletter section of the page */
-  #Testimony {
-    position: relative;                                 /* Position the newsletter section relative to its normal position */
-    background-color: #C04DFF;               /* Set the background color of the newsletter section */
-    height: 50vh;                                       /* Set the height of the newsletter section to 50% of the viewport height */
-    width: 100%;                                        /* Set the width of the newsletter section to 100% */
-    color: white;                                     /* Set the text color of the newsletter section to white */
-  }
+.menu {
+  max-width: 1000px;                                  /* Set the maximum width of the menu container to 1000 pixels */
+  margin-left: auto;                                       /* Center align the menu items */
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 50px;                                       /* Center align the menu container */
+  padding-top: 15px;                                  /* Add top padding to the menu container */
+  padding-left: 20%;
+}
+
+.menu-items {
+  list-style-type: none;                              /* Remove the default bullet points from the menu items */
+  float: left;   
+  margin: auto;                                       /* Center align the menu items */
+  padding-left: 20px;                                 /* Add left padding to the menu items */
+  padding-right: 20px;                                /* Add right padding to the menu items */
+}
+
+.menu-item {
+  float: left;                                        /* Float the menu items to the left */
+  padding-left: 40px;                                 /* Add left padding to the menu items */
+  height: 40px;                                       /* Set the height of the menu items to 40 pixels */
+}
+
+.menu-item a {
+  color: black;                                     /* Set the color of the menu item links to black */
+  text-decoration: none;                              /* Remove the underline from the menu item links */
+}
+
+.menu-item :hover {
+  color: rgb(141, 0, 197);                          /* Change the color of the menu item links on hover */
+}
+
+/* Styling for the content section of the page */
+#Content {
+  display: flex;                                      /* Display the content section as a flex container */
+  flex-direction: row;                                /* Set the flex direction to row */
+  flex-wrap: wrap;                                    /* Enable wrapping of flex items */
+  background: black;                                /* Set the background color of the content section to black */
+  scroll-snap-type: mandatory;                        /* Enable mandatory scroll snapping for the content section */
+  margin-top: 60px;                                   /* Add top margin to the content section to avoid overlapping with the fixed navbar */
+  z-index: 5;                                         /* Set the z-index of the content section to 5 */
+}
+
+/* Styling for the about section of the page */
+#About {
+  background-color: rgb(27, 27, 27);                /* Set the background color of the about section */
+  height: 100%;                                       /* Set the height of the about section to 100% */
+  width: 100%;                                        /* Set the width of the about section to 100% */
+}
+
+/* Styling for the blog section of the page */
+#Work {
+  position: relative;                                 /* Position the blog section relative to its normal position */  
+  background-color: #39FF14;             /* Set the background color of the blog section */
+  height: 50vh;                                      /* Set the height of the blog section to 600 pixels */
+  width: 100%;                                        /* Set the width of the blog section to 100% */
+  display: flex;
+}
+
+/* Styling for the newsletter section of the page */
+#Testimony {
+  position: relative;                                 /* Position the newsletter section relative to its normal position */
+  background-color: #C04DFF;               /* Set the background color of the newsletter section */
+  height: 50vh;                                       /* Set the height of the newsletter section to 50% of the viewport height */
+  width: 100%;                                        /* Set the width of the newsletter section to 100% */
+  color: white;                                     /* Set the text color of the newsletter section to white */
+}
   
   /* Styling for the partners section of the page */
 #Partners {
@@ -174,6 +174,26 @@ body::-webkit-scrollbar {
   grid-auto-flow: column;
   place-content: center;
   gap: 20px; /* Add spacing between figures */
+}
+.contact-us-title{
+  position: relative;
+  background: black;
+  height: 50vh;
+  width: 100%;
+  margin-bottom: -40vh;
+}
+.contact-icons{
+  position: relative;
+  background: black;
+  height: 7vh;
+  width: 100%;
+  display: grid;
+  grid-auto-flow: column;
+  place-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+  margin-bottom: -40vh;
 }
 .titles {
   font-weight: 600;                                   /* Set the font weight of titles to 600*/
