--- a/css/summer.css
+++ b/css/summer.css
@@ -55,7 +55,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #f2f2f2;
+    background-color: #dedddd;
     border-radius: 10px;
     padding: 10px;
     width: 8vw;
@@ -68,6 +68,14 @@
     cursor: pointer;
     width: 10vw;
     color: black;
+}
+
+.stat:hover h1{
+  color: black;
+}
+
+.stat:hover h2{
+  color: black;
 }
 
 #summer-description{
