--- a/css/styles.css
+++ b/css/styles.css
@@ -175,12 +175,9 @@ body::-webkit-scrollbar {
   place-content: center;
   gap: 20px; /* Add spacing between figures */
 }
-.contact-us-title{
-  position: relative;
-  background: black;
-  height: 50vh;
+.contact{
+  height: 10vh;
   width: 100%;
-  margin-bottom: -40vh;
 }
 .contact-icons{
   position: relative;
@@ -192,9 +189,31 @@ body::-webkit-scrollbar {
   place-content: center;
   align-items: center;
   gap: 20px;
-  margin-top: 20px;
-  margin-bottom: -40vh;
 }
+.contact-icons a{
+  text-decoration: none;
+  color: white;
+}
+/* Mail Icon */
+.contact-icons a:nth-of-type(1):before,
+.contact-icons a:nth-of-type(2):before {
+    content: '\f0e0'; /* Mail Icon Unicode */
+    font-family: FontAwesome;
+    margin-right: 5px; /* Adjust as needed */
+}
+
+/* Call Icon */
+.contact-icons a:nth-of-type(3):before,
+.contact-icons a:nth-of-type(4):before {
+    content: '\f095'; /* Call Icon Unicode */
+    font-family: FontAwesome;
+    margin-right: 5px; /* Adjust as needed */
+}
+.contact-icons a:hover:before {
+  transform: scale(1.2); /* Increase size on hover */
+  color: #ffc107; /* Change color on hover */
+}
+
 .titles {
   font-weight: 600;                                   /* Set the font weight of titles to 600*/
 }  
