--- a/css/styles.css
+++ b/css/styles.css
@@ -220,3 +220,41 @@ body::-webkit-scrollbar {
 .subtitles {
   font-weight: 100;
 }
+
+/*CSS for laoding screen*/
+#loader{
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  background-color: #000000;
+  width: 100vw;
+  height: 100vh;
+  z-index: 4000;
+  justify-content: center;
+}
+
+#loader img{
+  position: relative;
+  display: block;
+  margin: auto;
+  height: 20vh;
+  width: auto;
+  margin-top: 40vh;
+}
+
+#loop{
+  margin-top: 20vh;
+  height: 50vh;
+  width: auto;
+}
+
+#loader p{
+  text-align: center;
+  color: #ffffff;
+  font-size: 15px;
+  font-weight: 100;
+  width: 100%;
+  height: 10vh;
+  padding-top: 0;
+}
