--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body {
 
   height: 100%;                                       /* Set the height of the body to 100% */
   overflow-x: hidden;                                 /* Hide the horizontal scrollbar */
-
+  scroll-behavior: smooth;                            /* Enable smooth scrolling behavior */
 }
 
 /* Hide the scrollbar for webkit-based browsers */
@@ -37,6 +37,7 @@ body::-webkit-scrollbar {
   font-weight: 600;                                   /* Set the font weight of the navigation bar text to 600 */
   font-size: large;                                   /* Set the font size of the navigation bar text to large */
   z-index: 30;                                        /* Set the z-index of the navigation bar to 10 */
+  align-items: center;
 }
 .bar1, .bar2, .bar3 {
   width: 35px;
@@ -88,8 +89,8 @@ body::-webkit-scrollbar {
   list-style-type: none;                              /* Remove the default bullet points from the menu items */
   float: left;   
   margin: auto;                                       /* Center align the menu items */
-  padding-left: 20px;                                 /* Add left padding to the menu items */
-  padding-right: 20px;                                /* Add right padding to the menu items */
+  padding-left: 10px;                                 /* Add left padding to the menu items */
+  padding-right: 10px;                                /* Add right padding to the menu items */
 }
 
 .menu-item {
@@ -227,12 +228,10 @@ body::-webkit-scrollbar {
 }  
   /* Styling for the partners section of the page */
 #Partners {
-  position: relative;
   background: white;
-  height: 50vh;
   width: 100%;
   display: grid;
-  grid-auto-flow: column;
+  grid-template-columns: repeat(4, 1fr);
   place-content: center;
   gap: 20px; /* Add spacing between figures */
 }
@@ -246,8 +245,8 @@ body::-webkit-scrollbar {
   background: black;
   height: 7vh;
   width: 100%;
-  display: grid;
-  grid-auto-flow: column;
+  display: flex;
+  flex-wrap: wrap;
   place-content: center;
   align-items: center;
   gap: 20px;
