--- a/css/work.css
+++ b/css/work.css
@@ -2,6 +2,9 @@
     z-index: 20;
     background-color: black;
     height: auto;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #WorkH{
@@ -14,8 +17,8 @@
 }
 
 #Work a{
-    padding-top: -19vh;
     text-decoration: none;
+    width: 80%;
 }
 
 #Work1, #Work2, #Work3{
@@ -23,7 +26,7 @@
     background-color: #FF00AA;
     width: 26vw;
     height: auto;
-    margin: 3vw;
+    margin: 3vh auto 3vh auto;
     margin-top: -1vh;
     border-radius: 10px;
     position: relative;
@@ -31,6 +34,7 @@
     -webkit-transition: height 0.5s;
     text-align: center;
     transition: 0.5s;
+    ;
 }
 
 #Work1 img, #Work2 img, #Work3 img{
@@ -64,14 +68,15 @@
     width: 100%;
     transition: 0.5s;
 }
-
-#Work1:hover, #Work2:hover, #Work3:hover{
-    width: 28vw;
-    height: auto; 
-}
-
-#Work1:hover img, #Work2:hover img, #Work3:hover img{
-    opacity: 1;
+@media screen and (min-width: 767px){
+    #Work1:hover, #Work2:hover, #Work3:hover{
+        width: 28vw;
+        height: auto; 
+    }
+    
+    #Work1:hover img, #Work2:hover img, #Work3:hover img{
+        opacity: 1;
+    }
 }
 
 @media screen and (max-width: 767px){
@@ -80,7 +85,12 @@
       align-items: center;
     }
     #Work1, #Work2, #Work3{
-        width: 50%;
+        width: 100%;
+        height: 15rem;
+        
+    }
+    #Work1 p, #Work2 p, #Work3 p{
+        top:60%
     }
   }
   
