--- a/css/summer.css
+++ b/css/summer.css
@@ -197,3 +197,31 @@ figure.snip1192 .author h5 span {
   display: block;
 }
 
+@media only screen and (max-width: 767px) {
+  #content-stats{
+    flex-direction: column;
+    align-items: center;
+    height: 80vh;
+    justify-content: space-between;
+    }
+  .stat{
+    width: 90vw;
+    flex-direction: row;
+    align-items: center;
+    margin: 10px;
+  }
+  .stat h1{
+    padding: 10px;
+  }
+  #summer-description{
+    flex-direction: column;
+    height: 80vh;
+    width: 100%;
+    margin-left: 0px;
+  }
+  #testimonials{
+    
+  }
+
+}
+
